ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-web
  namespace: suryadasari31-dev
spec:
  selector:
    app: frontend-web
  ports:
    - port: 80
      targetPort: 80
