ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-web
  namespace: suryadasari31-dev
spec:
  to:
    kind: Service
    name: frontend-web
  port:
    targetPort: 80
  tls:
    termination: edge
